Set Java11 as minimum version. (#169)
Co-authored-by: Julien Gouesse